--- a/Test_Manager/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Test_Manager/Areas/Identity/Pages/Account/Register.cshtml
@@ -33,10 +33,11 @@
                 <span asp-validation-for="Input.fname" class="text-danger"></span>
             </div>
             <div class="form-floating mb-3">
-                <input type="checkbox" asp-for="Input.isAdmin"/>
-                <label asp-for="Input.isAdmin">Is admin ?</label>
-                <span asp-validation-for="Input.isAdmin" class="text-danger"></span>
+                <input asp-for="Input.lname" class="form-control" autocomplete="last-name" aria-required="true" placeholder="last name" />
+                <label asp-for="Input.lname">Enter Last Name</label>
+                <span asp-validation-for="Input.lname" class="text-danger"></span>
             </div>
+
             <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
         </form>
     </div>
